# CSE-Tactics

./: .gitmodules  .gitpod.yml  CMakeLists.txt  README.md  clang-format.sh
.github/workflows/: cpp.yml
cmake/: FindSDL2.cmake
include/: event.hpp  event_delegator.hpp  event_handler.hpp  game.hpp  game_instance.hpp  graphics.hpp  grid_element.hpp  gridelement.hpp  input.hpp  main.hpp  unit.hpp
src/: event_delegator.cpp  event_handler.cpp  game.cpp  graphics.cpp  grid_element.cpp  gridelement.cpp  input.cpp  main.cpp  unit.cpp
